<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/contentPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/sheetBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sheetBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_alt"
        app:layout_constraintBottom_toTopOf="@+id/navTabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/mediaArtContainer"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            app:cardCornerRadius="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/mediaArt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/album"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/placeholder" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/mediaTrack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="marquee"
            android:gravity="bottom"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/track"
            android:textColor="@color/fg"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/mediaArtist"
            app:layout_constraintEnd_toStartOf="@+id/mediaPlayPause"
            app:layout_constraintStart_toEndOf="@+id/mediaArtContainer"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mediaArtist"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="marquee"
            android:gravity="top"
            android:singleLine="true"
            android:text="@string/artist"
            android:textColor="@color/fg_alt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mediaPlayPause"
            app:layout_constraintStart_toEndOf="@+id/mediaArtContainer"
            app:layout_constraintTop_toBottomOf="@+id/mediaTrack" />

        <ImageButton
            android:id="@+id/mediaPlayPause"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ripple_bounded"
            android:contentDescription="@string/play_pause"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toStartOf="@+id/mediaSkipNext"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_play"
            app:tint="@color/fg" />

        <ImageButton
            android:id="@+id/mediaSkipNext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ripple_bounded"
            android:contentDescription="@string/skip_next"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_skip_next"
            app:tint="@color/fg" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/navTabs"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_alt"
        android:contentDescription="@string/navigation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabIconTint="@color/fg"
        app:tabIndicatorColor="@color/accent"
        app:tabIndicatorGravity="stretch"
        app:tabTextColor="@color/fg" />

</androidx.constraintlayout.widget.ConstraintLayout>