<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/navTabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/mediaCoordinator"
        android:layout_width="0dp"
        android:layout_height="@dimen/media_bar_height"
        app:layout_constraintBottom_toTopOf="@+id/navTabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/mediaSheet"
            style="@style/Base.Backing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="8dp"
            android:orientation="vertical"
            app:behavior_hideable="true"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mediaBar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/media_bar_height"
                app:layout_constraintBottom_toTopOf="@+id/navTabs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/mediaArtHold"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintBottom_toTopOf="@+id/mediaPositionHold"
                    app:layout_constraintDimensionRatio="V,1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/mediaArt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/art"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/mediaTrack"
                    style="@style/Base.TextView.Primary"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:ellipsize="marquee"
                    android:gravity="bottom"
                    android:singleLine="true"
                    android:text="@string/lorem_ipsum"
                    app:layout_constraintBottom_toTopOf="@+id/mediaArtist"
                    app:layout_constraintEnd_toStartOf="@+id/mediaPlayPause"
                    app:layout_constraintStart_toEndOf="@+id/mediaArtHold"
                    app:layout_constraintTop_toTopOf="@+id/mediaArtHold" />

                <TextView
                    android:id="@+id/mediaArtist"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="top"
                    android:singleLine="true"
                    android:text="@string/lorem_ipsum"
                    app:layout_constraintBottom_toBottomOf="@+id/mediaArtHold"
                    app:layout_constraintEnd_toEndOf="@+id/mediaTrack"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/mediaTrack"
                    app:layout_constraintTop_toBottomOf="@+id/mediaTrack" />

                <ImageButton
                    android:id="@+id/mediaPlayPause"
                    style="@style/Base.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="?android:selectableItemBackground"
                    android:contentDescription="@string/play_pause"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toTopOf="@+id/mediaPositionHold"
                    app:layout_constraintEnd_toStartOf="@+id/mediaSkipNext"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_play" />

                <ImageButton
                    android:id="@+id/mediaSkipNext"
                    style="@style/Base.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="?android:selectableItemBackground"
                    android:contentDescription="@string/skip_next"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toTopOf="@+id/mediaPositionHold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_skip_next" />

                <FrameLayout
                    android:id="@+id/mediaPositionHold"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <ProgressBar
                        android:id="@+id/mediaPositionDeterminate"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleY="1024" />

                    <FrameLayout
                        android:id="@+id/mediaPositionLive"
                        style="@style/Base.Live"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </FrameLayout>
                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/mediaContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/mediaTabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/mediaPager"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/navTabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>